<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d32f2f"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="494dp"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="630dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="492dp"
        android:layout_height="74dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button4"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/button6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:text="@string/button7" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>